replace pg.gen_id with golang ID generator
